premier commit seconde section

--- a/index.html
+++ b/index.html
@@ -13,43 +13,42 @@
       <h1>Terre@Air présentation</h1>
     </header>
     <section class="presentation">
-        <h2>Bienvenue</h2>
-        <p>
-          Terre@Air est une ASBL d’éducation à l’environnement, elle a pour but
-          la protection de la nature et la création de lien entre l’être humain
-          et la nature. Les différents objectifs de l’ASBL sont à chaque fois
-          une porte d’entrée sur la compréhension de la nature. En effet il est
-          autant possible de comprendre et respecter notre environnement en
-          allant voir les abeilles qu’en s’interrogeant sur la vie du sol....
-          Partant du principe que : on respecte seulement ce que l’on connaît,
-          les différents secteurs de l’ASBL ont tous pour objectifs de permettre
-          aux humains qui y participent d’appréhender la globalité de la nature.
-          L’éducation à l’environnement est un secteur neuf ! En effet,
-          l’écologie et la protection de l’environnement sont des notions
-          récentes dans l’histoire. De nos jours les sciences et technologies
-          nous permettent de comprendre en profondeur les fonctionnements de la
-          nature. Malheureusement, cette compréhension reste souvent accessible
-          uniquement à une élite. Par la création d’animations adaptées, l’ASBL
-          tente de rendre ce savoir accessible à tous. Jusqu’il y a peu, la
-          transmission du savoir se faisait naturellement des aînés vers les
-          plus jeunes. Actuellement, ce lien est brisé dans bien des cas et il
-          est temps d’investir de l’énergie dans cette tâche oubliée afin de
-          re-créer du lien entre l’homme et la nature. L’ASBL vise la
-          transmission des enseignements nécessaire à la compréhension globale
-          de la nature.
-        </p>
-        <img src="img/fulls/04.jpg" alt="apiculteurs" />
+      <h2>Bienvenue</h2>
+      <p>
+        Terre&#64;Air est une <i>ASBL</i> d’éducation à l’environnement, elle a pour
+        but la protection de la nature et la création de lien entre l’être
+        humain et la nature. Les différents objectifs de l’<i>ASBL</i> sont à chaque
+        fois une porte d’entrée sur la compréhension de la nature. En effet il
+        est autant possible de comprendre et respecter notre environnement en
+        allant voir les abeilles qu’en s’interrogeant sur la vie du sol....
+        Partant du principe que : <strong>on respecte seulement ce que l’on connaît,</strong> les
+        différents secteurs de l’<i>ASBL</i> ont tous pour objectifs de permettre aux
+        humains qui y participent d’appréhender la globalité de la nature.
+        L’éducation à l’environnement est un secteur neuf ! En effet, l’écologie
+        et la protection de l’environnement sont des notions récentes dans
+        l’histoire. De nos jours les sciences et technologies nous permettent de
+        comprendre en profondeur les fonctionnements de la nature.
+        Malheureusement, cette compréhension reste souvent accessible uniquement
+        à une élite. Par la création d’animations adaptées, l’<i>ASBL</i> tente de
+        rendre ce savoir accessible à tous. Jusqu’il y a peu, la transmission du
+        savoir se faisait naturellement des aînés vers les plus jeunes.
+        Actuellement, ce lien est brisé dans bien des cas et il est temps
+        d’investir de l’énergie dans cette tâche oubliée afin de re-créer du
+        lien entre l’homme et la nature. L’<i>ASBL</i> vise la transmission des
+        enseignements nécessaire à la compréhension globale de la nature.
+      </p>
+      <img src="img/fulls/04.jpg" alt="apiculteurs" />
       <article>
         <h3>ANIMATIONS</h3>
         <p>
-          L’ASBL Terre@Air vous propose des animations scolaires. L’animateur
-          vient donc directement en classe avec du matériel adapté. Nous avons
-          déjà constaté à de nombreuses reprises le changement d’attitude des
-          enfants après une animation. Ayant pris conscience du rôle primordial
-          de la nature dans notre vie, les enfants ont une réflexion plus
-          poussée et changent leur comportement au quotidien. Ils vont par
-          exemple, observer un insecte plutôt que de l’écraser, ils vont
-          partager leurs nouvelles découvertes avec leur entourage etc.
+          L’<i>ASBL</i> Terre&#64;Air vous propose des animations scolaires.
+          L’animateur vient donc directement en classe avec du matériel adapté.
+          Nous avons déjà constaté à de nombreuses reprises le changement
+          d’attitude des enfants après une animation. Ayant pris conscience du
+          rôle primordial de la nature dans notre vie, les enfants ont une
+          réflexion plus poussée et changent leur comportement au quotidien. Ils
+          vont par exemple, observer un insecte plutôt que de l’écraser, ils
+          vont partager leurs nouvelles découvertes avec leur entourage etc.
         </p>
         <img src="img/fulls/01.jpg" alt="apiculteurs et enfants" />
       </article>
@@ -71,5 +70,109 @@
         <img src="img/fulls/02.jpg" alt="apiculteurs et ruches" />
       </article>
     </section>
+    <div class="contact-info">
+      <section class="infos">
+        <h2>Pourquoi ce site</h2>
+        <p>
+          Dans le cadre de ma formation <strong>BeCode</strong> J'ai dû choisir une <i>ASBL</i> qui me
+          tient à coeur et retravailler leur site à partir d'un template web. Je
+          voulais une <i>ASBL</i> qui parle d'écologie et Belge. Les abeilles sont un
+          maillon indispensable de notre nature et leur protection devrait être
+          notre priorité.
+        </p>
+        <h2>
+          Ma citation
+        </h2>
+        <blockquote>
+          <p>
+            “La vie, c’est comme une bicyclette, il faut avancer pour ne pas
+            perdre l’équilibre.”
+          </p>
+          <q>
+            De
+            <cite
+              ><a
+                href="http://evene.lefigaro.fr/citations/albert-einstein?page=2"
+                target="_blank"
+                ><i>Albert Einstein.</i></a
+              ></cite
+            >
+          </q>
+        </blockquote>
+        <h2>Listes d'autres Asbls</h2>
+        <ul>
+          <li>
+            <a href="http://www.madeinabeilles.be/bee-to-b/" target="_blank"
+              >bee-to-b</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.alterapi.be/parrainer-une-ruche"
+              target="_blank"
+              >alterapi</a
+            >
+          </li>
+          <li>
+            <a
+              href="http://www.vivelesabeilles.be/Bijen/fr/je-mengage/association_639.aspx"
+              target="_blank"
+              >vivelesabeilles</a
+            >
+          </li>
+        </ul>
+        <h2>les liens pour follow Air@Terre</h2>
+        <ul class="icons">
+          <li>
+            <a href="#" class="icon fa-twitter"
+              ><span class="label">Twitter</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/Terreatair.be/"
+              target="_blank"
+              class="icon fa-facebook"
+              ><span class="label">Facebook</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="icon fa-instagram"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+        </ul>
+      </section>
+      <section class="contact">
+        <h2>Les contacter</h2>
+        <form action="#" method="post">
+          <div class="field half first">
+            <label for="name">Nom</label>
+            <input name="name" id="name" type="text" placeholder="Name" />
+          </div>
+          <div class="field half">
+            <label for="email">Email</label>
+            <input name="email" id="email" type="email" placeholder="Email" />
+          </div>
+          <div class="field">
+            <label for="message">Message</label>
+            <textarea
+              name="message"
+              id="message"
+              rows="6"
+              placeholder="Message"
+            ></textarea>
+          </div>
+          <ul class="actions">
+            <li>
+              <input value="Envoyer un message" class="button" type="submit" />
+            </li>
+          </ul>
+        </form>
+      </section>
+    </div>
+    <footer>
+      <p>© Untitled Design: TEMPLATED. Images: Unsplash.</p>
+    </footer>
   </body>
 </html>
