fin seconde section + retouche bordure et fonts responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <script
+      src="https://kit.fontawesome.com/b31d70df7d.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
@@ -15,23 +23,24 @@
     <section class="presentation">
       <h2>Bienvenue</h2>
       <p>
-        Terre&#64;Air est une <i>ASBL</i> d’éducation à l’environnement, elle a pour
-        but la protection de la nature et la création de lien entre l’être
-        humain et la nature. Les différents objectifs de l’<i>ASBL</i> sont à chaque
-        fois une porte d’entrée sur la compréhension de la nature. En effet il
-        est autant possible de comprendre et respecter notre environnement en
-        allant voir les abeilles qu’en s’interrogeant sur la vie du sol....
-        Partant du principe que : <strong>on respecte seulement ce que l’on connaît,</strong> les
-        différents secteurs de l’<i>ASBL</i> ont tous pour objectifs de permettre aux
-        humains qui y participent d’appréhender la globalité de la nature.
-        L’éducation à l’environnement est un secteur neuf ! En effet, l’écologie
-        et la protection de l’environnement sont des notions récentes dans
-        l’histoire. De nos jours les sciences et technologies nous permettent de
-        comprendre en profondeur les fonctionnements de la nature.
+        Terre&#64;Air est une <i>ASBL</i> d’éducation à l’environnement, elle a
+        pour but la protection de la nature et la création de lien entre l’être
+        humain et la nature. Les différents objectifs de l’<i>ASBL</i> sont à
+        chaque fois une porte d’entrée sur la compréhension de la nature. En
+        effet il est autant possible de comprendre et respecter notre
+        environnement en allant voir les abeilles qu’en s’interrogeant sur la
+        vie du sol.... Partant du principe que :
+        <strong>on respecte seulement ce que l’on connaît,</strong> les
+        différents secteurs de l’<i>ASBL</i> ont tous pour objectifs de
+        permettre aux humains qui y participent d’appréhender la globalité de la
+        nature. L’éducation à l’environnement est un secteur neuf ! En effet,
+        l’écologie et la protection de l’environnement sont des notions récentes
+        dans l’histoire. De nos jours les sciences et technologies nous
+        permettent de comprendre en profondeur les fonctionnements de la nature.
         Malheureusement, cette compréhension reste souvent accessible uniquement
-        à une élite. Par la création d’animations adaptées, l’<i>ASBL</i> tente de
-        rendre ce savoir accessible à tous. Jusqu’il y a peu, la transmission du
-        savoir se faisait naturellement des aînés vers les plus jeunes.
+        à une élite. Par la création d’animations adaptées, l’<i>ASBL</i> tente
+        de rendre ce savoir accessible à tous. Jusqu’il y a peu, la transmission
+        du savoir se faisait naturellement des aînés vers les plus jeunes.
         Actuellement, ce lien est brisé dans bien des cas et il est temps
         d’investir de l’énergie dans cette tâche oubliée afin de re-créer du
         lien entre l’homme et la nature. L’<i>ASBL</i> vise la transmission des
@@ -74,11 +83,11 @@
       <section class="infos">
         <h2>Pourquoi ce site</h2>
         <p>
-          Dans le cadre de ma formation <strong>BeCode</strong> J'ai dû choisir une <i>ASBL</i> qui me
-          tient à coeur et retravailler leur site à partir d'un template web. Je
-          voulais une <i>ASBL</i> qui parle d'écologie et Belge. Les abeilles sont un
-          maillon indispensable de notre nature et leur protection devrait être
-          notre priorité.
+          Dans le cadre de ma formation <strong>BeCode</strong> J'ai dû choisir
+          une <i>ASBL</i> qui me tient à coeur et retravailler leur site à
+          partir d'un template web. Je voulais une <i>ASBL</i> qui parle
+          d'écologie et Belge. Les abeilles sont un maillon indispensable de
+          notre nature et leur protection devrait être notre priorité.
         </p>
         <h2>
           Ma citation
@@ -100,61 +109,60 @@
           </q>
         </blockquote>
         <h2>Listes d'autres Asbls</h2>
-        <ul>
-          <li>
-            <a href="http://www.madeinabeilles.be/bee-to-b/" target="_blank"
-              >bee-to-b</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.alterapi.be/parrainer-une-ruche"
-              target="_blank"
-              >alterapi</a
-            >
-          </li>
-          <li>
-            <a
-              href="http://www.vivelesabeilles.be/Bijen/fr/je-mengage/association_639.aspx"
-              target="_blank"
-              >vivelesabeilles</a
-            >
-          </li>
-        </ul>
+        <div class="info-list">
+          <ul>
+            <li>
+              <a href="http://www.madeinabeilles.be/bee-to-b/" target="_blank"
+                >bee-to-b</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.alterapi.be/parrainer-une-ruche"
+                target="_blank"
+                >alterapi</a
+              >
+            </li>
+            <li>
+              <a
+                href="http://www.vivelesabeilles.be/Bijen/fr/je-mengage/association_639.aspx"
+                target="_blank"
+                >vivelesabeilles</a
+              >
+            </li>
+          </ul>
+        </div>
         <h2>les liens pour follow Air@Terre</h2>
-        <ul class="icons">
-          <li>
-            <a href="#" class="icon fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.facebook.com/Terreatair.be/"
-              target="_blank"
-              class="icon fa-facebook"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-        </ul>
+        <div class="socials">
+          <ul>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/Terreatair.be/" target="_blank"
+                ><i class="fab fa-facebook-square"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="contact">
         <h2>Les contacter</h2>
         <form action="#" method="post">
-          <div class="field half first">
-            <label for="name">Nom</label>
-            <input name="name" id="name" type="text" placeholder="Name" />
+          <div class="grid-form">
+            <div id="nm">
+              <label for="name">Nom</label>
+              <input name="name" id="name" type="text" placeholder="Name" />
+            </div>
+            <div id="em">
+              <label for="email">Email</label>
+              <input name="email" id="email" type="email" placeholder="Email" />
+            </div>
           </div>
-          <div class="field half">
-            <label for="email">Email</label>
-            <input name="email" id="email" type="email" placeholder="Email" />
-          </div>
-          <div class="field">
+          <div id="ms">
             <label for="message">Message</label>
             <textarea
               name="message"
@@ -163,11 +171,7 @@
               placeholder="Message"
             ></textarea>
           </div>
-          <ul class="actions">
-            <li>
-              <input value="Envoyer un message" class="button" type="submit" />
-            </li>
-          </ul>
+          <input class="submit-btn" type="submit" value="Envoyer un message">
         </form>
       </section>
     </div>
