--- a/index.html
+++ b/index.html
@@ -171,12 +171,15 @@
               placeholder="Message"
             ></textarea>
           </div>
-          <input class="submit-btn" type="submit" value="Envoyer un message">
+          <input class="submit-btn" type="submit" value="Envoyer un message" />
         </form>
       </section>
     </div>
     <footer>
-      <p>© Untitled Design: TEMPLATED. Images: Unsplash.</p>
+      <p>
+        © Untitled Design: <a href="#">TEMPLATED</a>. Images:
+        <a href="#">Unsplash.</a>
+      </p>
     </footer>
   </body>
 </html>
